<resources>
    <string name="app_name">EasemobVideoCall</string>
    <string name="app_slogon">IM as a service</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="talker_list">Talker_list</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="recall">Recall</string>
    <string name="msg_conference_invite">Come to the conference</string>
    <string name="msg_recall_by_self">This message has been recalled by myself</string>
    <string name="msg_recall_by_user">This message has been recalled by %1$s</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search_contanier">Search："%s"</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="stop_record">Stop record</string>
    <string name="meeting_setroom">Meeting setroom</string>
    <string name="switch_camera">Switch camera</string>
    <string name="capture_image">Capture image</string>
    <string name="record_finish_toast">Recording finish, file saved in %s</string>
    <string name="location_prefix">[my location]</string>
    <string name="picture">[Picture]</string>
    <string name="video">Video</string>
    <string name="microphone">Microphone</string>
    <string name="setrecord">Set Record</string>
    <string name="mergerstream">Merge Stream</string>
    <string name="pushcdn">Push CDN</string>
    <string name="push_audio_stream">Push Audio Stream</string>
    <string name="stream_record_format">Record Format</string>
    <string name="use_customize_server">Use Customize Server</string>
    <string name="set_cdn_url">Set CDN URL</string>
    <string name="voice_call">[Voice call]</string>
    <string name="video_call">[Video call]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="dynamic_expression">[dynamic expression]</string>
    <string name="Group_chat">group chat</string>
    <string name="all_members">All members</string>
    <string name="were_mentioned">[someone @me]</string>
    <string name="gorup_not_found">can not find group</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="user_forbidden">User is forbidden by server</string>
    <string name="set">Settings</string>
    <string name="roomset">Room settings</string>
    <string name="room_admin">Room admin</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="voice">Sounds</string>
    <string name="video_resolution">Video resolution</string>
    <string name="switch_audience">Switch audience</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="upload_log">Upload log</string>
    <string name="push_use_fcm">Message push use fcm</string>
    <string name="book_black">Black list</string>
    <string name="set_custom_appkey">Set custom App key</string>
    <string name="set_custom_server">Set custom servers</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Loading data</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="nickname_description">Once this nickname is set, it will be used in push notification (by default this is user ID ) when the receiver is using the iOS device.</string>
    <string name="group_chat">Group chat</string>
    <string name="chat_room">Channel</string>
    <string name="voice_and_video_conference">Voice and video conference</string>
    <string name="conference_invite_error">Did not get the meeting information, can not invite other people to join</string>
    <string name="add_friend">Add friends</string>
    <string name="search">Search</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Debug</string>
    <string name="push_nick">nickname for Notification</string>
    <string name="call_option">Call Option</string>
    <string name="multi_device_management">Multi device management</string>
    <string name="current_version">SDK version</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="add_public_group_chat">Add public group</string>
    <string name="add_public_chat_room">Add public channel</string>
    <string name="group_not_found">Can not find this group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public groups</string>
    <string name="join_need_owner_approval">Join need group owner approval</string>
    <string name="blacklist">Black list</string>
    <string name="serach_group_message">Search messages</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="block_offline_group_push">Block offline push</string>
    <string name="dismiss_group">Dismiss group</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Introduction">Brief</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="set_system">Set_system</string>
    <string name="add_room_anchor">Add_room_anchor</string>
    <string name="add_room_audience">Add_room_audience</string>
    <string name="room_name">Room name</string>
    <string name="room_password">Room_password</string>
    <string name="roomName">RoomName</string>
    <string name="roomPassword">RoomPassword</string>
    <string name="upload_log_info">Upload log info</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="downwaiting">Downloading the file, please wait a moment</string>
    <string name="mute">Mute</string>
    <string name="Hands_free">Handsfree</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
    <string name="unable_to_connect">Unable to connect to the server</string>
    <string name="newchat">Create new group</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="not_download">Did not download:</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="is_down_please_wait">Downloading video, please wait a moment</string>
    <string name="Exit_the_group_chat">Exit the group</string>
    <string name="accept_join_group">%s accept join group</string>
    <string name="refuse_join_group">%s refuse join group</string>
    <string name="at_your_in_group">%s @ you in group chat</string>
    <string name="emojicon_test_name">Test</string>
    <string name="not_add_myself">"Can't add yourself"</string>
    <string name="This_user_is_already_your_friend">This user is already your friend</string>
    <string name="Add_a_friend">Let me to be your friend!</string>
    <string name="send_successful">Request was sent, waiting for the peer to accept</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Network_error">Network error</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="please_check">key validation error!Please on AndroidManifest.xml file check the key set</string>
    <string name="expression">[expression]</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="be_removing">Be removing</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">Call was refused</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="The_other_is_on_the_phone">The peer is on the phone</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="call_version_inconsistent">Both call version are inconsistent</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
</resources>