<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff2f6"
    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#00acff"
            android:gravity="center_vertical" >
            <Button
                android:id="@+id/set_back"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="10dip"
                android:onClick="onRoomSettingback"
                android:background="@drawable/ease_mm_title_back"/>
            <com.src.videocall.easemobvideocall.ui.widget.EaseTitleBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleBarTitle="@string/roomset" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <RelativeLayout
                    android:id="@+id/rl_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:padding="10dip"
                    android:background="@drawable/em_btn_bottom_selector">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/roomName"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />
                    <TextView
                        android:id="@+id/room_name_edit"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|right"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:typeface="serif"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:id="@+id/rl_switch_video"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@drawable/em_btn_bottom_selector"
                        android:padding="10dip" >
                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dip"
                            android:text="@string/roomPassword"
                            android:textColor="@android:color/black"
                            android:layout_centerVertical="true"
                            android:textSize="14sp"
                            android:typeface="serif" />
                        <TextView
                            android:id="@+id/room_password_edit"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|right"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:typeface="serif"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/textview1"
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:background="@color/btn_gray_normal" />

                    <RelativeLayout
                        android:id="@+id/rl_switch_audio"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@drawable/em_btn_bottom_selector"
                        android:padding="10dip" >
                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dip"
                            android:text="@string/room_admin"
                            android:layout_centerVertical="true"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:typeface="serif" />
                        <TextView
                            android:id="@+id/room_admin_edit"
                            android:layout_width="280dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|right"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:typeface="serif"/>
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/btn_gray_normal" />
                    <RelativeLayout
                        android:id="@+id/rl_push_settings"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@drawable/em_btn_bottom_selector"
                        android:paddingLeft="10dip" >
                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10dip"
                            android:text="@string/upload_log_info"
                            android:textColor="@android:color/black"
                            android:textSize="13sp"
                            android:typeface="serif" />
                        <Button
                            android:id="@+id/btn_upload_roomlog"
                            android:layout_width="70dp"
                            android:layout_height="40dip"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:textColor="#00acff"
                            android:text="上传日志"
                            android:textSize="12sp"
                            android:background="@color/color_transparent"
                            android:layout_marginRight="10dip" />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/btn_gray_normal" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>